# metaflow-akash

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/metaflow_extensions/akash/: __init__.py
src/metaflow_extensions/akash/plugins/: __init__.py  akash_cli.py  akash_decorator.py  akash_executor.py  backend.py
tests/unit/: test_akash.py  test_akash_executor.py
